<resources>
    <string name="app_name">NautiChart</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear</string>
    <string name="title_activity_navigation"> Navigation Activity </string>
    <string name="exit_action"> Exit </string>
    <string name="navigation_drawer_open"> Open Drawer</string>
    <string name="navigation_drawer_close"> Close Drawer</string>
    <string name="my_location">This is my location</string>
    <string name="preview">Preview</string>

    <string name="download_maps"> Download maps </string>
    <string name="free"> %s </string>
    <string name="storage"> Storage available </string>
    <string name="reload"> Reload </string>

    <!-- Map Bottom Sheet CoordinatorLayout -->
    <string name="split_two_strings_formatter"> %1s, %2s </string>
    <string name="tools_textview">Tools</string>
    <string name="add_textview">Add</string>
    <string name="measure_textview">Measure</string>
    <string name="share_location_textview">Share</string>

    <string name="copied">Copied</string>

    <string name="tiles_count_textview">~ %s</string>

    <string name="loading_vessels_text">Fetching vessels positions…</string>
    <string name="loading_harbours_text">Fetching harbours…</string>
    <string name="legal_notice">Legal Notice</string>
    <string name="runtime_dialog_description">This tile provider doesn\'t approve offline downloads. Please use different tile provider.</string>
    <string name="ok">OK</string>
    <string name="vessels">Vessels</string>
    <string name="vessel_content_description">Vessel\'s info description.</string>

    <string name="implicit_geo_intent_title">Choose an application</string>
    <string name="implicit_geo_info_arg">Location: %1s, %2s</string>

    <string name="vessel_info_description">Flag: %1s \nMMSI: %2s \nLength: %3s \nSpeed: %4s (Kn) \nHeading:%5s \nType: %6s \nReceived: %7s UTC</string>
    <string name="move_map_to_download_desired_area">Move map to download desired area.</string>
    <string name="free_space_refresh_button">Free space refresh button</string>
    <string name="map_tile_source">Map tile source</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="zoom_levels">Zoom levels:</string>
    <string name="download_size">Download size:</string>
    <string name="tiles">Tiles:</string>
    <string name="depth_contours">Depth contours</string>
    <string name="harbours">Harbours</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="add_description">Add description</string>
    <string name="remove_description">Remove description</string>
    <string name="add_marker">Add Marker</string>
    <string name="search_here">Search here</string>
    <string name="favorite">Favorite</string>
    <string name="travel_plans">Travel plans</string>
    <string name="category_name">Category name</string>
    <string name="save">Save</string>
    <string name="new_category">New category</string>
    <string name="empty_list">Empty list</string>
    <string name="distance_from_geopoint">Distance: %1s</string>
    <string name="bearing_from_geopoint">Bearing: %1s</string>
    <string name="history">History</string>
    <string name="categories">Categories</string>
    <string name="delete_poi_marker_title">Do you really wish to delete this poi marker?</string>
    <string name="delete_category_title">Do you really wish to delete this category?</string>
    <string name="delete_category_description">All markers in this category will be removed.</string>
    <string name="delete_recent_searched_element">Delete recent searched element?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="navigate_back">Navigate back.</string>
    <string name="select_icon">Select icon</string>
    <string name="show_all_searched_places">Show all searched places</string>
    <string name="network_error">Check your internet connection.</string>
    <string name="search_history_list">Search history list</string>
    <string name="custom_category_icon">Custom category icon.</string>
    <string name="error_image">Error image.</string>
    <string name="default_tile_source">Default</string>
    <string name="satellite">Satellite</string>
    <string name="topography">Topography</string>
    <string name="grid">Grid</string>
    <string name="marker_icon">Marker icon</string>
    <string name="search">Search</string>
    <string name="precise_location_disabled">Precise location disabled</string>
    <string name="precise_location_disabled_message">Precise location access is needed for determining your exact current location. Please grant access to your precise location in app settings.</string>
    <string name="grant">Grant</string>
    <string name="close">Close</string>
    <string name="download_map">Download map</string>
    <string name="download_poi">Download poi</string>
    <string name="customize_map">Customize map</string>
    <string name="custom_map">Custom map</string>
    <string name="sailing_route">Sailing route</string>
    <string name="nothing_found_text_place_holder">%1s found in %2s %3s</string>
    <string name="extend_search_radius_text_place_holder">Extend search radius to %1s %2s</string>
    <string name="unknown_location_title">Couldn\'t determine your current location.</string>
    <string name="unknown_location_description">Make sure device\'s location is enabled.</string>
    <string name="unknown_location_image_view_content_description">Unknown location image.</string>
    <string name="count_text_place_holder">Count: %1s</string>
    <string name="show_results_on_the_map_place_holder">Show %1s on the map</string>
    <string name="loading_elements">Loading elements…</string>
    <string name="unknown_region">Unknown region</string>
    <string name="skip">SKIP</string>
    <string name="choose_region_description">Please choose your region for which POIs should be downloaded.</string>
    <string name="welcome">Welcome!</string>
    <string name="no_network_available">No network available.</string>
    <string name="service_unavailable">Service unavailable.</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="downloading">Downloading</string>
    <string name="fetching_location">Fetching location</string>
    <string name="download_success">Download was successful.</string>
    <string name="region_download_success">%1s downloaded!</string>
    <string name="regions">Regions</string>
    <string name="countries">Countries</string>
    <string name="mapnik_default">Mapnik (default)</string>
    <string name="add_icon">Add icon</string>
    <string name="change_icon">Change icon</string>
    <string name="fetching_regions">Fetching regions…</string>
    <string name="download_started">Download started. This can take few minutes.</string>
    <string name="vessels_ais">Vessels AIS</string>
    <string name="show_all">Show all</string>
    <string name="no_pois_downloaded">No POIs downloaded.</string>
    <string name="continents">Continents</string>
    <string name="choose_icon">Please choose icon.</string>
    <string name="category_present">Category already present!</string>
    <string name="location_not_known_yet">Location not known yet.</string>
    <string name="press_back_again">Press back again to exit.</string>
    <string name="min_max_zoom">Min %1s | Max %2s</string>
    <string name="tile_size">Tile size</string>
    <string name="confirm">Confirm</string>
    <string name="done">Done</string>
    <string name="custom_tile_source">Custom tile source</string>
    <string name="choose_file_format">Choose file format</string>
    <string name="browse_files">Browse files</string>
    <string name="online">Online</string>
    <string name="local">Local</string>
    <string name="delete_custom_tile_provider_prompt">Do you really wish to delete this custom tile provider?</string>

    <string name="vessel_type_1">Non-moving object</string>
    <string name="vessel_type_3">Tug or Special craft</string>
    <string name="vessel_type_4">High speed craft</string>
    <string name="vessel_type_6">Passenger ship, Ferry, Cruise ship, Pleasure craft</string>
    <string name="vessel_type_7">Cargo ship</string>
    <string name="vessel_type_8">Tanker</string>
    <string name="vessel_type_9">Motor yacht, Sailing yacht, Fishing vessel, Pleasure craft</string>
    <string name="vessel_type_unknown">Manned VTS or Unknown object</string>
    <string name="add">Add</string>
    <string name="third_party_app">Third party app</string>
    <string name="copy_coordinates">Copy coordinates</string>
    <string name="send">Send</string>

    <string-array name="searchHistoryKeys">
        <item>Today</item>
        <item>Yesterday</item>
        <item>Last 7 days</item>
        <item>Last 30 days</item>
    </string-array>

    <string-array name="regions_group_names">
        <item> Regions </item>
    </string-array>

    <string-array name="regions_child_names">
        <item> Africa </item>
        <item> Asia </item>
        <item> Europe </item>
        <item> North America </item>
        <item> Oceania </item>
        <item> Russia </item>
        <item> South America </item>
    </string-array>

</resources>