<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/rounded_dialog" >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/precise_location_disabled"
        android:textColor="@color/dialog_color"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textColor="@color/dialog_color"
        android:gravity="center_horizontal"
        android:text="@string/precise_location_disabled_message" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="20dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:background="@drawable/custom_dialog_button"
        android:padding="6dp"
        android:textColor="@color/dialog_color"
        android:layout_gravity="start"
        android:layout_marginEnd="45dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_grant_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grant"
        android:textColor="@color/dialog_color"
        android:background="@drawable/custom_dialog_button"
        android:layout_gravity="end"
        android:layout_marginStart="45dp"/>

    </LinearLayout>

</LinearLayout>