<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/rounded_dialog" >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:textColor="@color/dialog_color"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/legal_notice" />

    <TextView
        android:id="@+id/dialog_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:textColor="@color/dialog_color"
        android:gravity="center_horizontal"
        android:text="@string/runtime_dialog_description"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/dialog_color"
        android:background="@drawable/custom_dialog_button"
        android:text="@string/ok" />

</LinearLayout>