<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/map_tools_bottom_sheet_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:padding="25dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/download_map_image_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_download_24"
                android:background="@color/transparent"
                android:scaleX="1.6"
                android:scaleY="1.6"
                app:tint="@color/adaptive_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download_map" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/custom_tile_source_imagebutton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/transparent"
                android:src="@drawable/custom_map_source_icon"
                app:tint="@color/adaptive_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_map" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/salling_route_image_view"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/transparent"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center"
            android:src="@drawable/route_icon"
            app:tint="@color/adaptive_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sailing_route" />

    </LinearLayout>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>